✨ [FEAT] Adicionando resource de systemStat
Descrição detalhada:
- Adicionando resource de systemStat com controller, router, schemas, services e types.
- Adicionando rota de systemStat no v1Router.
- Modificando create_resource para melhorar a criação de resources.
- Modificando swagger-output.json e swagger.ts para adicionar a rota de systemStat.
-

Notas adicionais:
- close #5
