# backend/src/router/v1Router.ts
@@ -2,6 +2,7 @@ import { Router } from "express";
 
 import statRouter from "../resources/stat/stat.router";
 import systemRouter from "../resources/system/system.router";
+import systemStatRouter from "../resources/systemStat/systemStat.router";
 
 const v1Router = Router();
 
@@ -13,6 +14,11 @@ v1Router.use(
 v1Router.use(
   "/systems", // #swagger.tags = ['Systems']
   systemRouter
+);
+
+v1Router.use(
+  "/systemStats", // #swagger.tags = ['System Stats']
+  systemStatRouter
 );
 
 export default v1Router;
